# ai-assistant

./: UPDATE_LOG.md  index.html  install.json  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
scripts/: release.mjs
src/: App.tsx  main.tsx  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  hotkey.rs  main.rs  ocr.rs  tray.rs  utils.rs  window.rs
src/common/: utils.ts
src/common/highlight-in-textarea/: index.ts
src/content_script/: PopupCard.tsx  popupStyles.ts  translate.ts
src/popup/: Settings.tsx
srcipts/: updater.mjs
